# MCTrack

./: .gitignore  CHANGELOG.md  README.md  eval.py  pyproject.toml
config/: nuscenes.yaml
evaluation/static_evaluation/nuscenes/: eval.py
preprocess/: convert2baseversion.py
